    1      sim  Out of bound accesses to SRAM, flash, EEPROM
    1     devs  USART baud rates
    1     devs  USART frame sizes
    1  jintgen  DisassemblerGenerator: split fields that span word boundaries
    1   sensor  update-node-id with ELF must use flash, not RAM address
    1    input  Grammar for new objdump version
    2    radio  Detect receives of radio bytes and notify radio probes

----------------------------------- Completed -----------------------------------------
    1    input  Workaround for objdump 2.16.1 bug                             1.7.74 
    1      gdb  Switched gdb monitor to use lowercase hex [Tim Auton]         1.7.73
    1      dev  Fixed problem with ADC conversion simulation                  1.7.72
    1      sim  Enable / Disable interrupts on write to SREG                  1.7.69
    1      sim  RAMPZ usage for with more than 128k of flash                  1.7.63
    1   energy  Energy monitor log                                            1.7.61
    1     devs  Check auto-unpost behavior of ADC interrupt                   1.7.60
    1      sim  ATMega128 sleep mode codes                                    1.7.56
    1    flash  Fixes to external flash implementation                        1.7.56
    1    input  Objdump fixes for binutils incompatibility                    1.7.56
    1      sim  Nullpointer in updateNodeID() when loading from ELF file      1.7.40
    1    input  Fixed processing of -sections option                         1.5.118
    1    probe  Recursion in State.getDataByte() from within watch           1.5.102
    2     devs  Interrupt mappings for devices on ATMega32                   1.5.102
    1    probe  Memory monitor not reporting all of memory                    1.5.94
    1    radio  Deadlock problems in Freespace radio                          1.5.91
    2    probe  BatteryMonitor hang problems                                  1.5.88